# SecondTask

./: Makefile  ReceiveMessage.c  ReceiveMessage.h  main.c
SecondTaskReceiver/: CMakeLists.txt  Makefile  MessageAddDashes.c  MessageAddDashes.h  MessageAddSpaces.c  MessageAddSpaces.h  MessageReverse.c  MessageReverse.h  MessageUpper.c  MessageUpper.h  ReceiveMessage.c  ReceiveMessage.h  SendMessage.c  SendMessage.h  main.c  queue.c  queue.h  queueStruct.h  socketStruct.h
SecondTaskSender/: CMakeLists.txt  Makefile  ReceiveMessage.c  main.c  structures.h
